# knot-losing-you

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROGRESS_UPDATES.md  README.md  manual_validation_testing.md  planning.md
.claude/: code_standards.md  project_overview.md  pyright_type_hints_reference.md  repo_structure_and_script_map.md
.github/: .instructions.md  commit-instructions.md
.github/prompts/: create-claude-prompt.prompt.md  create-pr.prompt.md  create-progress-entry.prompt.md
.github/workflows/: linting_validation.yaml
docs/: angular_offset_calibration.md  closed_vs_open_loop_control.md  extrinsic_calibration.md  intrinsic_calibration.md  pan_oscillation_issues.md  pan_servo_feedback_investigation.md  pantilt_camera_forward_offset.md  pantilt_servo_curve_calibration.md
docs/engineering_theory/: bounding_box_to_angular_heading.md  closed_vs_open_loop_control.md  control_loop_rate_theory.md  coordinate_system_conversion.md  intrinsic_calibration.md  pan_control_stops_and_curves_theory.md  pantilt_camera_forward_offset.md  rover_drive_calibration.md  uart_servo_bus_and_encoders.md
docs/math_theory/: laplace_transform_primer.md
ugv-follower/: calibrate_angular_offset.py  calibrate_waveshare_camera.py  capture_calibration_images.py  check_battery.py  pyproject.toml  pyrightconfig.json  run_follower.py  test_camera_access.py  test_lidar_access.py  test_ugv_controller.py
ugv-follower/configs/: calibration_config.yaml  model_config.yaml  pipeline_config.yaml  sensor_config.yaml
ugv-follower/src/: pipeline.py  settings.py
ugv-follower/src/control/: __init__.py  ugv_controller.py
ugv-follower/src/inference/: __init__.py  object_detection.py
ugv-follower/src/perception/: __init__.py  camera_access.py  lidar_access.py
ugv-follower/src/ugv_follower/: __init__.py  pipeline.py  settings.py
ugv-follower/src/ugv_follower/control/: __init__.py  command_shaper.py  motion_command.py  pan_controller.py  ugv_controller.py
ugv-follower/src/ugv_follower/inference/: object_detection.py
ugv-follower/src/ugv_follower/perception/: __init__.py  camera_access.py  lidar_access.py  lidar_geometry.py  waveshare_camera.py
ugv-follower/src/ugv_follower/utils/: __init__.py  camera_preflight.py  config_utils.py  fisheye_utils.py  mjpeg_server.py
ugv-follower/src/utils/: config_utils.py
ugv-follower/tests/: __init__.py  test_calibrate_pantilt_servo.py  test_calibrate_ugv_drive.py  test_camera_access.py  test_check_battery.py  test_command_shaper.py  test_lidar_access.py  test_lidar_geometry.py  test_mjpeg_server.py  test_motion_command.py  test_object_detection.py  test_pan_controller.py  test_ugv_controller.py  test_waveshare_camera.py
ugv-follower/tools/: __init__.py  check_battery.py  check_camera_access.py  check_lidar_access.py  check_pan_tilt_feedback.py  check_ugv_controller.py  run_follower.py  scan_servo_ids.py
ugv-follower/tools/calibration/: __init__.py  calibrate_angular_offset.py  calibrate_pantilt_servo.py  calibrate_ugv_drive.py  calibrate_waveshare_camera.py  capture_calibration_images.py
