[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ugv-follower"
version = "0.1.0"
description = "Autonomous UGV that follows you around the boat park using OAK-D Lite and LiDAR"
requires-python = ">=3.11"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Alex Helsham", email = "alexandra.helsham@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# Core dependencies
dependencies = [
    "pyserial>=3.5",      # for LiDAR and UGV serial comms
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.1.78",
    "ultralytics>=8.0.0",
    "lap>=0.5.12",            # required by ByteTrack (ultralytics tracking)
    "loguru>=0.7.3",
    "PyYAML>=6.0",
    "depthai>=3.2.1",
]

# Optional dependencies for different use cases
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "nbqa>=1.9.1",
    "nbstripout>=0.8.1",
]

notebook = [
    "ipython",
    "jupyter",
]

# URLs for project information
[project.urls]
Homepage = "https://github.com/Yeah-Nah/knot-losing-you"
Repository = "https://github.com/Yeah-Nah/knot-losing-you"
Issues = "https://github.com/Yeah-Nah/knot-losing-you/issues"

# Setuptools configuration
[tool.setuptools.package-dir]
"" = "src"
tools = "tools"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["ugv_follower*", "tools*"]

[project.scripts]
ugv-run = "tools.run_follower:main"
ugv-check-battery = "tools.check_battery:main"
ugv-check-camera = "tools.check_camera_access:main"
ugv-check-lidar = "tools.check_lidar_access:main"
ugv-check-controller = "tools.check_ugv_controller:main"
ugv-calibrate-angular = "tools.calibration.calibrate_angular_offset:main"
ugv-calibrate-camera = "tools.calibration.calibrate_waveshare_camera:main"
ugv-calibrate-pantilt = "tools.calibration.calibrate_pantilt_servo:main"
ugv-capture-calibration = "tools.calibration.capture_calibration_images:main"
ugv-calibrate-drive = "tools.calibration.calibrate_ugv_drive:main"
ugv-check-pan-tilt-feedback = "tools.check_pan_tilt_feedback:main"
ugv-scan-servo-ids = "tools.scan_servo_ids:main"
